--- a/client/src/Page/Home/FeaturedCourses/FeaturedCourses.module.scss
+++ b/client/src/Page/Home/FeaturedCourses/FeaturedCourses.module.scss
@@ -1,8 +1,11 @@
 .featuredCourses__container {
   display: grid;
   justify-items: center;
+  background: rgba(36, 30, 70, 0.389);
+  backdrop-filter: blur(8px);
+  border-radius: 9px;
   margin: 10xp;
-  padding: 10px;
+  padding: 40px;
   grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
   grid-gap: 26px; // Khoảng cách giữa các card
 
@@ -10,12 +13,14 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    padding: 10px;
   }
 
   &__container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 24px;
+
     padding: 16px;
   }
 
@@ -24,5 +29,12 @@
     color: #666;
     font-size: 14px;
     background-color: #f0f8ff;
+  }
+}
+
+.featuredCourses_content {
+  padding: 10px;
+  h4 {
+    color: "#e6356f";
   }
 }
