--- a/client/src/Page/CertificatesPage/CertificatesPage.scss
+++ b/client/src/Page/CertificatesPage/CertificatesPage.scss
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Dancing+Script:wght@700&family=Exo:ital,wght@0,500;1,500&family=Playfair+Display:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&family=Great+Vibes&family=Quattrocento:wght@400;700&display=swap");
-
+$text_color: #f05a28;
+$border_color: #585fa2;
+$background_hover: #e11d48;
 .certificates-scroll-view {
   height: auto;
   overflow-y: auto;
@@ -94,6 +96,19 @@
       padding: 20px 40px;
       border-radius: 8px;
       // box-shadow: #f0e9e9 0 5px 10px 2px;
+      p {
+        color: $text_color;
+      }
+      button {
+        background: none;
+        color: $text_color;
+        border: 2px solid $border_color;
+
+        &:hover {
+          background: $background_hover;
+          color: #f9f5e9;
+        }
+      }
     }
   }
 }
