cập nhật bản mới 1.4 giao diện

--- a/client/src/Page/Login/Login.scss
+++ b/client/src/Page/Login/Login.scss
@@ -134,6 +134,7 @@ $text-color: #ffffff;
         background: $primary-color;
         border: none;
         border-radius: 8px;
+        color: #ffffff;
 
         &:hover {
           background: darken($primary-color, 10%);
