cập nhật bản mới 1.5 giao diện

--- a/client/src/Page/CertificatesPage/CertificatesPage.scss
+++ b/client/src/Page/CertificatesPage/CertificatesPage.scss
@@ -132,3 +132,11 @@ $background_hover: #e11d48;
     font-size: 12px;
   }
 }
+
+.btn_viewcertificates {
+  display: flex;
+  justify-content: flex-end;
+  &:hover {
+    background: none;
+  }
+}
