--- a/client/src/Page/Login/Login.scss
+++ b/client/src/Page/Login/Login.scss
@@ -19,6 +19,10 @@ $text-color: #ffffff;
   }
 }
 
+.Google_login {
+  width: 100%;
+}
+
 // Login container
 .login-container {
   min-height: 100vh;
@@ -140,6 +144,46 @@ $text-color: #ffffff;
           background: darken($primary-color, 10%);
         }
       }
+    }
+  }
+}
+.google-login-container {
+  margin-top: 20px;
+
+  .divider {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 20px;
+
+    &::before,
+    &::after {
+      content: "";
+      flex: 1;
+      border-bottom: 1px solid #e8e8e8;
+    }
+
+    &::before {
+      margin-right: 20px;
+    }
+
+    &::after {
+      margin-left: 20px;
+    }
+
+    .divider-text {
+      color: #8c8c8c;
+      padding: 0 10px;
+    }
+  }
+
+  .google-login-wrapper {
+    display: flex;
+    justify-content: center;
+
+    .custom-google-login {
+      width: 100%;
+      max-width: 350px;
     }
   }
 }
