--- a/client/src/components/Coupon/MyCouponsPage.scss
+++ b/client/src/components/Coupon/MyCouponsPage.scss
@@ -196,3 +196,12 @@ $transition-speed: 0.3s;
 .btn-back:hover {
   background: none;
 }
+
+.coupon-card--expired {
+  opacity: 0.5;
+  background-color: #f2f2f2;
+}
+
+.coupon-card__header-status--expired {
+  color: #ff4d4f;
+}
